--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A pages site build by VitePress for smile project",
   "devDependencies": {
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "^1.0.0-rc.31"
+    "mermaid": "^10.6.1",
+    "vitepress": "^1.0.0-rc.31",
+    "vitepress-plugin-mermaid": "^2.0.16"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
